--- a/package.json
+++ b/package.json
@@ -19,12 +19,17 @@
     "express": "^4.15.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-hot-loader": "^1.3.1",
+    "react-redux": "^5.0.5",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "webpack": "^3.4.1",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.18.2"
   },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
-    "babel-runtime": "^6.25.0"
+    "babel-runtime": "^6.25.0",
+    "redux-logger": "^3.0.6"
   }
 }
