--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   "dependencies": {
     "babel-polyfill": "^6.23.0",
     "babel-runtime": "^6.25.0",
+    "react-router": "^4.1.2",
+    "react-router-dom": "^4.1.2",
     "redux-logger": "^3.0.6"
   }
 }
