--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-runtime": "^6.25.0",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
+    "react-router-redux": "^4.0.8",
     "redux-logger": "^3.0.6"
   }
 }
