--- a/package.json
+++ b/package.json
@@ -4,28 +4,36 @@
   "description": "gallery in react js.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "npm test -- --watch",
+    "test:coverage": "npm test -- --coverage",
     "start": "node server.js"
   },
   "author": "Sergey Avanesyan",
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.25.0",
+    "babel-core": "^6.26.0",
+    "babel-jest": "^21.0.2",
     "babel-loader": "^7.1.1",
+    "babel-plugin-module-resolver": "^2.7.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "enzyme": "^2.9.1",
     "react-hot-loader": "^1.3.1",
+    "react-test-renderer": "^15.6.1",
     "redux-devtools-extension": "^2.13.2",
+    "redux-mock-store": "^1.3.0",
     "redux-thunk": "^2.2.0",
     "webpack": "^3.4.1",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.18.2"
   },
   "dependencies": {
-    "babel-polyfill": "^6.23.0",
     "babel-runtime": "^6.25.0",
     "express": "^4.15.3",
     "react": "^15.6.1",
@@ -37,5 +45,10 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-ui": "^0.1.1"
+  },
+  "jest": {
+    "transform": {
+      ".*": "<rootDir>/node_modules/babel-jest"
+    }
   }
 }
